[tool.poetry]
name = "tearobot2"
version = "0.1.0"
description = ""
authors = ["Ahmed Shahwan <m@ahsh.xyz>"]

[tool.poetry.dependencies]
python = "^3.6"
python-telegram-bot = "^11.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
